fix the navigation

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -434,6 +434,11 @@
   margin: 0;
   font-size: 1.25rem;
 
+  //added 
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+
   a {
     color: inherit;
   }
@@ -444,6 +449,8 @@
     padding-right: 0.5em;
     font-weight: bold;
   }
+
+
 
   @include breakpoint(max-width $large - 1px) {
     position: relative;
