--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -438,6 +438,7 @@
   display: flex;
   justify-content: center;
   gap: 1.5rem;
+  border: 2px solid red; // <-- Add this line
 
   a {
     color: inherit;
